--- a/Rain Man/res/layout/main.xml
+++ b/Rain Man/res/layout/main.xml
@@ -19,4 +19,13 @@
     android:textSize="24sp"
     android:gravity="center"
     />
+<TextView  
+    android:id="@+id/weather"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content"
+    android:text="@string/retrieving_weather"
+    android:textSize="24sp"
+    android:gravity="center"
+    />
+    
 </LinearLayout>
