--- a/Rain Man/res/layout/main.xml
+++ b/Rain Man/res/layout/main.xml
@@ -5,63 +5,43 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/header"
-        android:textSize="30sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:gravity="center" />
+        style="@style/header" />
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/gps_coordinates"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:gravity="center" />
+        style="@style/label" />
 
     <TextView
         android:id="@+id/gps_coordinates"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/retrieving"
-        android:textSize="20sp"
-        android:gravity="center" />
+        style="@style/value" />
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/zipcode"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:gravity="center" />
+        style="@style/label" />
 
     <TextView
         android:id="@+id/zipcode"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/retrieving"
-        android:textSize="20sp"
-        android:gravity="center" />
-        
+        style="@style/value" />
+
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/weather"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:gravity="center" />
-        
+        style="@style/label" />
+
     <TextView
         android:id="@+id/weather"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:text="@string/retrieving"
-        android:textSize="20sp"
-        android:gravity="center" />
+        style="@style/value" />
+
+    <TextView
+        android:text="@string/polling_interval"
+        style="@style/label" />
+
+    <TextView
+        android:id="@+id/polling_interval"
+        android:text="@string/retrieving"
+        style="@style/value" />
 
 </LinearLayout>
